# app.js
@@ -7,6 +7,8 @@ const swaggerDocument = require("./swagger.json");
 const productRoutes = require("./routes/product.routes");
 const orderRoutes = require("./routes/order.routes");
 const authRoutes = require("./routes/auth.routes");
+const seatRoutes = require("./routes/seat.routes");
+const testimonialRoutes = require("./routes/testimonial.routes");
 
 const app = express();
 
@@ -18,8 +20,10 @@ app.use(express.json());
 // Swagger Docs Route
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-app.use("/", authRoutes);
+app.use("/auth", authRoutes);
 app.use("/product", productRoutes);
 app.use("/order", orderRoutes);
+app.use("/seat", seatRoutes);
+app.use("/testimonial", testimonialRoutes);
 
 module.exports = app;
