# routes/order.routes.js
@@ -4,5 +4,7 @@ const orderController = require("../controllers/order.controller");
 
 router.post("/", orderController.createOrder);
 router.get("/", orderController.getOrders);
+router.put("/:id", orderController.updateOrder);
+router.delete("/:id", orderController.deleteOrder);
 
 module.exports = router;
