# routes/seat.routes.js
@@ -1,0 +1,10 @@
+const express = require("express");
+const router = express.Router();
+const seatController = require("../controllers/seat.controller");
+
+router.get("/", seatController.getSeats);
+router.post("/", seatController.createSeat);
+router.put("/:id", seatController.updateSeat);
+router.delete("/:id", seatController.deleteSeat);
+
+module.exports = router;
