# routes/testimonial.routes.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+const testimonialController = require('../controllers/testimonial.controller');
+
+router.get('/', testimonialController.getAllTestimonials);
+router.post('/', testimonialController.createTestimonial);
+
+module.exports = router;
